--- a/Desafios/Desafio 12/style.css
+++ b/Desafios/Desafio 12/style.css
@@ -8,7 +8,7 @@
 /* fontes */
 @font-face {
     font-family: 'Passion One';
-    src: url('fontes/PassionOne-Bold.ttf') format('truetype');
+    src: url('fontes/PassionOne-Regular.ttf') format('truetype');
 }
 @font-face {
     font-family: 'Sriracha';
@@ -23,9 +23,9 @@
 /* cabecalho */
 header{
     background-color: black;
-    text-align: center;
     color: white;
-    padding: 60px;
+    text-align: center;
+    padding: 30px 0px;
 }
 
 header h1{
@@ -36,12 +36,13 @@ header h1{
 
 header p{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 10px;
 }
 
 header a{
+    color: white;
     font-weight: bold;
     text-decoration: none;
-    color: white;
 }
 
 header a:hover{
@@ -49,23 +50,44 @@ header a:hover{
 }
 
 /* conteudo */
-article p{
+.normal p{
     font-family: var(--fonte-paragrafos);
-    font-size: 4.5em;
+    padding: 30px;
+    margin: 30px 0px;
+    font-size: 4em;
 }
 
-.img1{
+#img1{
     background-image: url('imagens/background001.jpg');
     background-attachment: fixed;
     background-position: center center;
     background-size: cover;
-    color: white;
+    height: 1100px;
+    position: relative;
+
 }
 
-.img2{
-    background-image: url('imagens/background002.jpg');
+#img2{
+    background-image:  url('imagens/background002.jpg');
     background-attachment: fixed;
-    background-position: center center;
-    background-size: cover;
+    background-position: center top;
+    background-size: 100% 100%;
+    height: 1100px;
+    position: relative;
+}
+
+.imagem p{
+    font-family: var(--fonte-paragrafos);
+    font-size: 4em;
     color: white;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.479);
+    background-color: rgba(0, 0, 0, 0.397);
+    margin: 30px;
+    max-width: 750px;
+    min-width: 320px;
+}
+
+
+footer{
+    bac
 }
