--- a/Desafios/Desafio 12/style.css
+++ b/Desafios/Desafio 12/style.css
@@ -84,7 +84,7 @@ header a:hover{
 .imagem{/* section das imagens */
     background-attachment: fixed;
     background-position: center top;
-    background-size: 100% 100%;
+    background-size: cover;
     height: 1100px;
     position: relative;
 }
