--- a/Desafios/Desafio 15/styles/styles.css
+++ b/Desafios/Desafio 15/styles/styles.css
@@ -3,29 +3,77 @@
 *{
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
 }
 
-html, body{
-    height: 100vh;
-    width: 100vw;
-    background-color: black;
+body{
+    background-image: url('../imagens/fundo-madeira.jpg');
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: top center;
 }
 
-main{
+.container{
+    display: flex;
+}
+
+.cell{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 98%;
     height: 100vh;
+    padding: 10px;
+}
+
+.cell img{
     position: relative;
-    background-color: green;
+    width: 300px;
 }
 
-section .cell{
-    height: 500px;
-    width: 500px;
-    background-color: blue;
-
+.screen{
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+}
 
-    background: url('../imagens/frame-iphone.png');
+.screen iframe{
+    height: 457px;
+    margin-top: 7px;
+}
+
+.outros iframe{
+    height: 400px;
+    margin-top: 7px;
+    overflow: hidden;
+}
+
+
+.nav{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 10px;
+}
+
+.link img{
+    width: 50px;
+    border-radius: 30px;
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.445);
+}
+
+.link img:hover{
+    border: 2px solid white;
+    transition: 0.7s;
+}
+
+
+@media (max-width: 424px){
+    .cell img{
+        width: 200px;
+    }
+
+    .link img{
+    width: 40px;
+    border-radius: 30px;
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.445);
+    }
 }
